--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse ml-auto" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#row1">For Couples</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#row2">For Planners</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
@@ -70,14 +70,16 @@
       </a>
     </div>
    <!-- END OF CAROUSEL -->
+
     <!--  FEATURETTES -->
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div id="row1" class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <button>View Portfolios</button>
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
@@ -86,10 +88,11 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div id="row2" class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <button>Sign Up</button>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
@@ -102,17 +105,18 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <button>View Portfolios</button>
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
       </div>
+
     </div>
 
         <hr class="featurette-divider">
 
         <!-- /END THE FEATURETTES -->
 
-    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
