--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="https://unpkg.com/scrollreveal@4"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Wedding Planner Portfolio</title>
   </head>
   <body>
       <!-- NAV BAR -->
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
-      <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Wedding Planner's Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,15 +26,15 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#row1">For Couples</a>
+            <a class="nav-link" href="#row1">For Planners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#row2">For Planners</a>
+            <a class="nav-link" href="#row2">For Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#row3">About Us</a>
           </li>
-        </ul>
+           </ul>
       </div>
     </nav>
 
@@ -75,9 +75,13 @@
 
     <hr class="featurette-divider">
 
-    <div id="row1" class="row featurette">
+    <div id="row1" class="row row1 featurette">
+    <script>ScrollReveal().reveal(document.querySelector('#row1'), {
+        duration: 2900,
+        reset: true
+});</script>
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+        <h2 class="featurette-heading"> Find your perfect planner. <span class="text-muted"> See for yourself.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           <button class="myBtn">View Portfolios</button>
       </div>
@@ -89,10 +93,15 @@
     <hr class="featurette-divider">
 
     <div id="row2" class="row featurette">
+        <script>ScrollReveal().reveal(document.querySelector('#row2'), {
+            duration: 2900,
+            reset: true
+        });</script>
+
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+        <h2 class="featurette-heading"> Build clientele. <span class="text-muted"> Showcase your work.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          <button>Sign Up</button>
+          <button class="myBtn">Sign Up</button>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
@@ -101,11 +110,15 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div id="row3" class="row featurette">
+        <script>ScrollReveal().reveal(document.querySelector('#row3'), {
+            duration: 2900,
+            reset: true
+        });</script>
       <div class="col-md-7">
         <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        <button>View Portfolios</button>
+        <button class="myBtn">View Portfolios</button>
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
@@ -116,9 +129,10 @@
         <hr class="featurette-divider">
 
         <!-- /END THE FEATURETTES -->
-
+        <footer></footer>
 
     <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
