created basic about-us page

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <!--  FEATURETTES -->
 
-    <hr class="featurette-divider">
+    <hr id="row1" class="featurette-divider">
 
-    <div id="row1" class="row row1 featurette">
-    <script>ScrollReveal().reveal(document.querySelector('#row1'), {
+    <div id="for-partners"class="row featurette">
+    <script>ScrollReveal().reveal(document.querySelector('#for-partners'), {
         duration: 2900,
         reset: true
 });</script>
@@ -90,10 +90,10 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr id ="row2" class="featurette-divider">
 
-    <div id="row2" class="row featurette">
-        <script>ScrollReveal().reveal(document.querySelector('#row2'), {
+    <div id="fp" class="row featurette">
+        <script>ScrollReveal().reveal(document.querySelector('#fp'), {
             duration: 2900,
             reset: true
         });</script>
@@ -108,17 +108,17 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr id="row3" class="featurette-divider">
 
-    <div id="row3" class="row featurette">
-        <script>ScrollReveal().reveal(document.querySelector('#row3'), {
+    <div id="last-row" class="row featurette">
+        <script>ScrollReveal().reveal(document.querySelector('#last-row'), {
             duration: 2900,
             reset: true
         });</script>
       <div class="col-md-7">
         <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        <button class="myBtn">View Portfolios</button>
+        <a href="about-us.html"><button class="myBtn">Learn More</button></a>
       </div>
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" src="./assets/featurettes-image.svg" alt="Generic placeholder image">
