--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+      <link rel="icon" 
+          type="image/ico" 
+        href="./assets/favicon.ico">
 
     <link href="./css/index.css" rel="stylesheet" />
     <!-- Required meta tags -->
@@ -16,7 +19,7 @@
       <!-- NAV BAR -->
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
-          <a class="navbar-brand" href="#">Wedding Planner's Portfolio</a>
+          <a class="navbar-brand" href="index.html">Wedding Planner's Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
