--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" 
+        type="image/ico" 
+        href="./assets/favicon.ico">
 
     <link href="./css/index.css" rel="stylesheet" />
     <!-- Required meta tags -->
@@ -16,14 +19,14 @@
       <!-- NAV BAR -->
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
-          <a class="navbar-brand" href="#">Wedding Planner's Portfolio</a>
+          <a class="navbar-brand" href="index.html">Wedding Planner's Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#row1">For Planners</a>
