--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- NAV BAR -->
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
-          <a class="navbar-brand" href="index.html">Wedding Planner's Portfolio</a>
+          <img class="navbar-brand nav-size" src="./assets/white_logo_transparent.png" />
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,11 +55,24 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="./assets/wedding-img-1.jpg" alt="First slide">
+           <div class="carousel-caption carousel-padding d-none d-md-block">
+               <h1>Sign Up Now</h1>
+               <p> Lots of stuff, lots of stuff, lorem di ipsum and random other stuff</p>
+               <button class="myBtn">Log In </button>
+            </div>
         </div>
         <div class="carousel-item">
+           <div class="carousel-caption carousel-padding d-none d-md-block">
+               <h1>Sign Up Now</h1>
+               <p> Lots of stuff, lots of stuff, lorem di ipsum and random other stuff</p>
+            </div>
           <img class="d-block w-100" src="./assets/wedding-img-2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
+           <div class="carousel-caption carousel-padding d-none d-md-block">
+               <h1>Sign Up Now</h1>
+               <p> Lots of stuff, lots of stuff, lorem di ipsum and random other stuff</p>
+            </div>
           <img class="d-block w-100" src="./assets/wedding-img-3.jpg" alt="Third slide">
         </div>
       </div>
