--- a/about-us.html
+++ b/about-us.html
@@ -18,23 +18,23 @@
   <body>
       <!-- NAV BAR -->
 
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark nav-color">
-          <a class="navbar-brand" href="index.html">Wedding Planner's Portfolio</a>
+      <nav class="navbar navbar-expand-lg navbar-dark nav-color">
+          <img class="navbar-brand nav-size" src="./assets/white_logo_transparent.png" />
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#row1">For Planners</a>
+            <a class="nav-link" href="index.html#row1">For Planners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#row2">For Partners</a>
+            <a class="nav-link" href="index.html#row2">For Partners</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="#row3">About Us</a>
           </li>
            </ul>
@@ -44,8 +44,8 @@
     <!-- END OF NAV BAR -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <h1 class="display-4">Meet the Team</h1>
+        <p class="lead">Teamwork makes the dream work.</p>
       </div>
     </div>
     <!-- START OF TEAM ROW -->
@@ -54,35 +54,51 @@
       <div class="container marketing">
 
         <!-- Three columns of text below the carousel -->
-            <h1>Meet our team</h1>
         <div class="row">
           <div class="col-lg-4 team-member">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+              <a href="https://github.com/mpereannor" target="_blank"><img class="rounded-circle" src="./assets/sam.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <h2>Samuel Mpere Annor</h2>
+            <h6>Web React I</h6>
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-4 team-member">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+              <a href="https://github.com/nicholas-patterson" target="_blank"><img class="rounded-circle" src="./assets/nick.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <h2>Nicholas Patterson</h2>
+            <h6>Web Backend (Node)</h6>
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-4 team-member">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <a href="https://github.com/SilverMaiden" target="_blank"><img class="rounded-circle overlay" src="./assets/humaira.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <h2>Humaira Syed</h2>
+            <h6>Web UI Developer</h6>
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-4 team-member">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <a href="https://github.com/devin5" target="_blank"><img class="rounded-circle" src="./assets/dev.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <h2>Devin Dias</h2>
+            <h6>Web React II</h6>
           </div><!-- /.col-lg-4 -->
+
+          <div class="col-lg-4 team-member">
+              <a href="https://github.com/micahriley88" target="_blank"><img class="rounded-circle" src="./assets/micah.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <h2>Micah Riley</h2>
+            <h6>Web React I</h6>
+          </div><!-- /.col-lg-4 -->
+
 
         </div><!-- /.row -->
 
 
       
       </div><!-- /.container -->
-        <footer></footer>
+    <!-- FOOTER -->
+    <footer class="footer mt-auto py-3 ">
+      <div class="container">
+        <span>Copyright © Riconante Weddings</span>
+      </div>
+    </footer>
+    <!-- END OF FOOTER -->
+
 
     <!-- Optional JavaScript -->
 
