added font-awesome github icons

--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
           type="image/ico" 
         href="./assets/favicon.ico">
 
+    <script src="https://kit.fontawesome.com/d9c9e76860.js" crossorigin="anonymous"></script>
     <link href="./css/index.css" rel="stylesheet" />
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -56,33 +57,43 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4 team-member">
-              <a href="https://github.com/mpereannor" target="_blank"><img class="rounded-circle" src="./assets/sam.png" alt="Generic placeholder image" width="140" height="140"></a>
-            <h2>Samuel Mpere Annor</h2>
+              <img class="rounded-circle" src="./assets/sam.png" alt="Generic placeholder image" width="140" height="140">            <h2>Samuel Mpere Annor</h2>
             <h6>Web React I</h6>
+            <a href="https://github.com/mpereannor" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4 team-member">
-              <a href="https://github.com/nicholas-patterson" target="_blank"><img class="rounded-circle" src="./assets/nick.png" alt="Generic placeholder image" width="140" height="140"></a>
-            <h2>Nicholas Patterson</h2>
+              <img class="rounded-circle" src="./assets/nick.png" alt="Generic placeholder image" width="140" height="140">
+              <h2>Nicholas Patterson</h2>
             <h6>Web Backend (Node)</h6>
+            <a href="https://github.com/nicholas-patterson" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4 team-member">
-              <a href="https://github.com/SilverMaiden" target="_blank"><img class="rounded-circle overlay" src="./assets/humaira.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <img class="rounded-circle overlay" src="./assets/humaira.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Humaira Syed</h2>
             <h6>Web UI Developer</h6>
+            <a href="https://github.com/SilverMaiden" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
+
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4 team-member">
-              <a href="https://github.com/devin5" target="_blank"><img class="rounded-circle" src="./assets/dev.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <img class="rounded-circle" src="./assets/dev.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Devin Dias</h2>
             <h6>Web React II</h6>
+            <a href="https://github.com/devin5" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4 team-member">
-              <a href="https://github.com/micahriley88" target="_blank"><img class="rounded-circle" src="./assets/micah.png" alt="Generic placeholder image" width="140" height="140"></a>
+            <img class="rounded-circle" src="./assets/micah.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Micah Riley</h2>
             <h6>Web React I</h6>
+            <a href="https://github.com/micahriley88" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+
           </div><!-- /.col-lg-4 -->
 
 
