changed last featurette heading

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ But, taking the photos is only half the battle. They still need to be put out th
             reset: true
         });</script>
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Our planners passion for weddings, creative spirit, undivided attention for you, and open and affirming attitude sets Riconante Weddings apart. Each of the many planners on our platform bring a fresh perspective to event design, and work with your budget and ideas to create an extraordinary event with contemporary style and elegance.</p>
+          <h2 class="featurette-heading">Commitment. <span class="text-muted"> It's what we do. </span></h2>
+        <p class="lead">Our planners passion for weddings, creative spirit, undivided attention for you, and open and affirming attitude sets Riconante Weddings apart. Each of the many planners on our platform bring a fresh perspective to event design, and are committed to work with your budget and ideas to create an extraordinary event with contemporary style and elegance.</p>
         <a href="about-us.html"><button class="myBtn">Learn More</button></a>
       </div>
 
