--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#row2">For Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#row3">About Us</a>
+            <a class="nav-link" href="about-us.html">About Us</a>
           </li>
            </ul>
       </div>
